	- Changes Introduced In 0.1.3
	- Changes Introduced In 0.1.2
	- Changes Introduced In 0.1.1
    - Changes Introduced In 0.1.0

****************************************************
\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\

**Changes introduced in 0.3.0

[Fix]		Resolved issue with exporting only a single unconnected managed cable
[Fix]		Resolved failure to restore from backup
[Feature]	Highlight cable path
[Feature]	Diagram builder
[Feature]	Print cable path
[Enhance]	Added user setting to change orientation of cable in path depictions
[Enhance]	Consolodated action buttons into dropdown

**Changes introduced in 0.2.4

[Fix]		Corrected issue with floorplan images covering floorplan controls ("Explore" page)
[Fix]		Corrected port designation to display flag instead of "*" when changed
[Fix]		Corrected inability to connect SC ports to LC ports

**Changes introduced in 0.2.3

[Fix]		Resolved issue with inserts not importing correctly when installed in enclosures with more than 2 rows
[Fix]		Corrected tempate image size when displaying insert template details
[Fix]		Corrected issue with floorplan images covering floorplan controls
[Fix]		Adjusted permissions to allow Administrators to remove users
[Fix]		Adjusted permissions to allow users to change settings and password
[Feature]	Added ability to configure cabinet RU numbering direction

**Changes introduced in 0.2.2

[Fix]		Display template image as correct size when initially uploaded
[Fix]		Changed port ID field order to reflect lower order incremental fields incrementing first
[Fix]		Corrected issue with port IDs consisting of more than 3 incremental fields not incrementing as expected
[Fix]		Corrected port ID validation
[Fix]		Prevent duplicate port ID accross entire template
[Fix]		Corrected display of half RU inserts
[Fix]		Resolved database issue when switching cabinet side (Front/Back)
[Fix]		Resolved issue with legacy enclosure partitions with no tolerance specified causing template clone error